--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,10 +1,8 @@
 @import 'abstracts/variables';
-// @import 'abstracts/functions';
 @import 'abstracts/mixins';
-// @import 'abstracts/placeholders';
+
 
 @import 'vendors/bootstrap-4.5/bootstrap.scss';
-// @import 'vendors/jquery-ui';
 
 @import 'base/reset';
 @import 'base/typography';
@@ -13,16 +11,22 @@
 @import 'layout/grid';
 @import 'layout/header';
 @import 'layout/footer';
-// @import 'layout/sidebar';
-// @import 'layout/forms';
+@import 'layout/hero-section';
+@import 'layout/features';
+
+
+
 
 @import 'components/buttons';
-// @import 'components/carousel';
-// @import 'components/cover';
-// @import 'components/dropdown';
+@import 'components/imagen';
+@import 'components/navbar';
+@import 'components/cards';
+@import 'components/precios';
 
-// @import 'pages/home';
-// @import 'pages/contact';
 
-// @import 'themes/theme';
-// @import 'themes/admin';
+
+
+
+// @import 'components/hero-section';
+
+
