layout listo modificacion en diseño

--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -36,3 +36,11 @@ $large: 20px;
 $small: 14px;
 $x-small: 12px;
 
+// weight
+$seis-ciento: 600;
+$cuatro-ciento: 400;
+$tres-ciento: 300;
+$sete-ciento: 700;
+
+// fonts
+$family-raleway: 'Raleway', sans-serif;
