--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9918,17 +9918,95 @@ img {
   left: 20px;
 }
 .hero-section__text .text__titulo {
-  padding-top: 50px;
-  font-size: 30px;
-  font-weight: 600;
+  padding: 50px 0px 30px;
+  font-size: 35px;
+  font-weight: 700;
+  margin: 0px;
+  text-align: left;
+  font-family: "Raleway", sans-serif;
+}
+.hero-section__text .text__contenido {
+  text-align: left;
   margin: 0px;
 }
 
 .caracteristicas__titulo {
   padding: 10px 0px 50px 0px;
   text-align: center;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
 }
 
+.estadisticas__titulo {
+  margin: 0px;
+  font-family: "Raleway", sans-serif;
+  padding-bottom: 50px;
+}
+
+.cartas__titulo {
+  text-align: center;
+  color: #fff;
+  padding: 30px 0px;
+  font-size: 35px;
+  font-weight: 600;
+  margin: 0px;
+}
+
+.card-title {
+  font-size: 14px;
+  font-family: "Raleway", sans-serif;
+}
+
+.card-subtitle {
+  font-size: 30px;
+  text-align: center;
+  font-weight: 600;
+}
+
+footer {
+  color: #fff;
+  font-size: 20px;
+}
+
+@media only screen and (min-width: 600px) and (max-width: 992px) {
+  .estadisticas__contenido {
+    margin: 0px;
+    padding: 0px 150px;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1980px) {
+  .hero-section__text {
+    left: 20px;
+  }
+  .hero-section__text .text__titulo {
+    padding: 30px 0px 30px;
+    font-size: 35px;
+    font-weight: 700;
+    margin: 0px;
+    text-align: left;
+    font-family: "Raleway", sans-serif;
+  }
+  .hero-section__text .text__contenido {
+    text-align: left;
+    margin: 0px;
+  }
+
+  .estadisticas__titulo {
+    margin: 0px;
+    font-family: "Raleway", sans-serif;
+    padding-bottom: 30px;
+  }
+
+  .estadisticas__contenido {
+    margin: 0px;
+    width: 250px;
+  }
+
+  footer {
+    color: #fff;
+    font-size: 14px;
+  }
+}
 .rows {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -10185,25 +10263,25 @@ footer {
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
-  color: #fff;
-  font-size: 20px;
 }
 
 #hero-section {
   position: relative;
-  height: 450px;
+  height: 550px;
 }
 
 .hero-section__img {
-  top: 250px;
+  top: 280px;
   position: relative;
 }
 
 .hero-section__text {
   top: 0px;
   width: 300px;
-  text-align: left;
+  text-align: center;
   position: absolute;
+  padding: 0px 20px;
+  margin: 0px;
 }
 
 /*media queries aplicados para el ajuste del hero section*/
@@ -10220,9 +10298,11 @@ footer {
   }
 
   .hero-section__text {
-    width: 500px;
+    width: 350px;
     position: absolute;
+    top: 50px;
     left: 150px;
+    padding: 0px;
   }
 }
 .feature {
@@ -10231,6 +10311,10 @@ footer {
 
 .feature-estadisticas .estadisticas__titulo {
   text-align: center;
+}
+
+#caracteristicas {
+  height: 650px;
 }
 
 @media only screen and (min-width: 600px) and (max-width: 992px) {
@@ -10251,7 +10335,19 @@ footer {
   .feature-estadisticas .estadisticas__contenido {
     width: 450px;
   }
+
+  #caracteristicas {
+    height: 350px;
+  }
 }
+.form-inline > a {
+  padding-right: 20px;
+}
+
+.card__button {
+  font-size: 12px;
+}
+
 .feature__grafico {
   display: block;
   margin-left: auto;
@@ -10263,30 +10359,88 @@ footer {
   width: 100%;
 }
 
-@media only screen and (min-width: 992px) and (max-width: 1980px) {
+@media only screen and (min-width: 900px) and (max-width: 1980px) {
   .feature__grafico {
     padding-top: 20px;
   }
 }
+.navbar {
+  padding: 0px 50px;
+}
+
+.navbar-toggler {
+  border: none !important;
+}
+
+@media only screen and (min-width: 1000px) and (max-width: 1980px) {
+  .navbar {
+    padding: 10px 150px;
+  }
+}
+.card__linea--ultimo {
+  margin-top: 2rem;
+}
+
+.card-body ul {
+  padding: 0px 0px 0px 20px;
+  margin: 0px;
+}
+
+@media only screen and (min-width: 600px) and (max-width: 768px) {
+  .card__linea--ultimo {
+    margin-top: 290px;
+  }
+
+  .card__linea--ultimo2 {
+    margin-top: 200px;
+  }
+}
 @media only screen and (min-width: 768px) and (max-width: 1980px) {
-  cartas {
-    padding: 0px 6.25rem;
+  .cartas {
+    height: 800px;
+  }
+
+  .card__linea--ultimo {
+    margin-top: 190px;
+  }
+
+  .card__linea--ultimo2 {
+    margin-top: 95px;
+  }
+
+  .card-body {
+    height: 450px;
   }
 }
 .precios {
   position: relative;
-  height: 750px;
+  height: 1050px;
   overflow: hidden;
 }
 
 .cartas {
   position: absolute;
-  top: 150px;
-  height: 600px;
-  background: #333745;
-  padding: 0px 50px;
+  top: 100px;
+  height: 1000px;
+  background: purple;
+  padding: 0px 100px;
 }
 
+@media only screen and (min-width: 500px) and (max-width: 768px) {
+  .precios {
+    position: relative;
+    height: 950px;
+    overflow: hidden;
+  }
+
+  .cartas {
+    position: absolute;
+    top: 180px;
+    height: 800px;
+    background: pink;
+    padding: 0px 100px;
+  }
+}
 @media only screen and (min-width: 768px) and (max-width: 900px) {
   .precios {
     position: relative;
@@ -10296,23 +10450,85 @@ footer {
 
   .cartas {
     position: absolute;
-    top: 350px;
-    height: 400px;
+    top: 180px;
+    height: 600px;
     padding: 0px 100px;
+    background: #333745;
   }
 }
-@media only screen and (min-width: 900px) and (max-width: 1980px) {
+@media only screen and (min-width: 900px) and (max-width: 1000px) {
   .precios {
     position: relative;
-    height: 750px;
+    height: 900px;
     overflow: hidden;
   }
 
   .cartas {
     position: absolute;
-    top: 350px;
+    top: 250px;
+    height: 700px;
+    padding: 0px 120px;
+    background: #333745;
+  }
+}
+@media only screen and (min-width: 1000px) and (max-width: 1200px) {
+  .precios {
+    position: relative;
+    height: 900px;
+    overflow: hidden;
+  }
+
+  .cartas {
+    position: absolute;
+    top: 250px;
+    height: 700px;
+    padding: 0px 200px;
+    background: red;
+  }
+}
+@media only screen and (min-width: 1200px) and (max-width: 1400px) {
+  .precios {
+    position: relative;
+    height: 900px;
+    overflow: hidden;
+  }
+
+  .cartas {
+    position: absolute;
+    top: 270px;
+    height: 750px;
+    padding: 0px 320px;
+    background: paleturquoise;
+  }
+}
+@media only screen and (min-width: 1400px) and (max-width: 1500px) {
+  .precios {
+    position: relative;
+    height: 900px;
+    overflow: hidden;
+  }
+
+  .cartas {
+    position: absolute;
+    top: 300px;
+    height: 750px;
+    padding: 0px 420px;
+    background: hotpink;
+  }
+}
+@media only screen and (min-width: 1500px) and (max-width: 1980px) {
+  .precios {
+    position: relative;
+    height: 900px;
+    overflow: hidden;
+  }
+
+  .cartas {
+    position: absolute;
+    top: 250px;
     height: 400px;
-    padding: 0px 100px;
+    padding: 0px 400px;
+    background: transparent;
   }
 }
 
