--- a/assets/sass/components/_precios.scss
+++ b/assets/sass/components/_precios.scss
@@ -1,21 +1,37 @@
+// configuracion de mobile
 .precios{
     position: relative;
-    height: 750px;
+    height: 1050px;
     overflow: hidden;
 
 }
 .cartas{
     position: absolute;
-    top: 150px;
-    height: 600px;
-    background: $gris-dos;
-    padding: 0px 50px;
+    top: 100px;
+    height: 1000px;
+    background: purple;
+    padding: 0px 100px;
 
 }
 
-
-
 // aplicar media queries
+
+@media only screen and (min-width: 500px) and (max-width: 768px){
+    .precios{
+        position: relative;
+        height: 950px;
+        overflow: hidden;
+    
+    }
+    .cartas{
+        position: absolute;
+        top: 180px;
+        height: 800px;
+        background: pink;
+        padding: 0px 100px;
+    
+    }
+}
 
 @media only screen and (min-width: 768px) and (max-width: 900px){
     .precios{
@@ -26,26 +42,103 @@
     }
     .cartas{
         position: absolute;
-        top: 350px;
-        height: 400px;
+        top: 180px;
+        height: 600px;
         padding: 0px 100px;
+        background: $gris-dos;
         
     
     }
 }
 
-@media only screen and (min-width: 900px) and (max-width: 1980px){
+@media only screen and (min-width: 900px) and (max-width: 1000px){
     .precios{
         position: relative;
-        height: 750px;
+        height: 900px;
         overflow: hidden;
 
     }
+    // configuracion de centralización de las card;
     .cartas{
         position: absolute;
-        top: 350px;
+        top: 250px;
+        height: 700px;
+        padding: 0px 120px;
+        background:$gris-dos;
+        
+    
+    }
+}
+@media only screen and (min-width: 1000px) and (max-width: 1200px){
+    .precios{
+        position: relative;
+        height: 900px;
+        overflow: hidden;
+
+    }
+    // configuracion de centralización de las card;
+    .cartas{
+        position: absolute;
+        top: 250px;
+        height: 700px;
+        padding: 0px 200px;
+        background: red;
+        
+    
+    }
+}
+@media only screen and (min-width: 1200px) and (max-width: 1400px){
+    .precios{
+        position: relative;
+        height: 900px;
+        overflow: hidden;
+
+    }
+    // configuracion de centralización de las card;
+    .cartas{
+        position: absolute;
+        top: 270px;
+        height: 750px;
+        padding: 0px 320px;
+        background:paleturquoise;
+        
+    
+    }
+}
+@media only screen and (min-width: 1400px) and (max-width: 1500px){
+    .precios{
+        position: relative;
+        height: 900px;
+        overflow: hidden;
+
+    }
+    // configuracion de centralización de las card;
+    .cartas{
+        position: absolute;
+        top: 300px;
+        height: 750px;
+        padding: 0px 420px;
+        background: hotpink;
+        
+    
+    }
+}
+
+// version desktop
+@media only screen and (min-width: 1500px) and (max-width: 1980px){
+    .precios{
+        position: relative;
+        height: 900px;
+        overflow: hidden;
+
+    }
+    // configuracion de centralización de las card;
+    .cartas{
+        position: absolute;
+        top: 250px;
         height: 400px;
-        padding: 0px 100px;
+        padding: 0px 400px;
+        background: transparent;
         
     
     }
