--- a/assets/sass/layout/_features.scss
+++ b/assets/sass/layout/_features.scss
@@ -1,6 +1,5 @@
 
 .feature{
-    // width: 100%;
     padding: 0px 30px;
 }
 
@@ -10,6 +9,10 @@
     }
     
 }
+#caracteristicas{
+    height: 650px;
+}
+
 @media only screen and (min-width: 600px) and (max-width: 992px){
     #caracteristicas{
         margin-top: 250px;
@@ -30,5 +33,8 @@
         .estadisticas__contenido{
             width: 450px;
         }
+    }
+    #caracteristicas{
+        height: 350px;
     }
 }
