--- a/assets/sass/layout/_hero-section.scss
+++ b/assets/sass/layout/_hero-section.scss
@@ -1,20 +1,20 @@
 #hero-section{
     position: relative;
-    height: 450px;
+    height: 550px;
 }
 
 .hero-section__img{
-   top: 250px;
-    position: relative;
-
-
+   top: 280px;
+   position: relative;
 }
+
 .hero-section__text{
   top: 0px;
   width: 300px;
-  text-align: left;
+  text-align: center;
     position: absolute;
-   
+    padding: 0px 20px;
+    margin: 0px;
 }
 
 /*media queries aplicados para el ajuste del hero section*/
@@ -23,8 +23,6 @@
     #hero-section{
         position: relative;
     height: 850px;
-
-
     }
     
     .hero-section__img{
@@ -32,13 +30,14 @@
         width: 100vw;
         position: absolute;
     
-    
     }
     .hero-section__text{
-        width: 500px;
+        width: 350px;
         position: absolute;
-        // top: 100px;
+        top: 50px;
         left: 150px;
+    padding: 0px;
+
     
     }
 }
