--- a/assets/sass/components/_precios.scss
+++ b/assets/sass/components/_precios.scss
@@ -9,7 +9,7 @@
     position: absolute;
     top: 100px;
     height: 1100px;
-    background: purple;
+    background: $gris-dos;
     padding: 0px 80px;
 
 }
@@ -27,7 +27,7 @@
         position: absolute;
         top: 150px;
         height: 1000px;
-        background: pink;
+        background:$gris-dos;
         padding: 0px 120px;
     
     }
@@ -42,7 +42,7 @@
     }
     .cartas{
         position: absolute;
-        top: 180px;
+        top: 160px;
         height: 600px;
         padding: 0px 100px;
         background: $gris-dos;
@@ -82,7 +82,7 @@
         top: 250px;
         height: 700px;
         padding: 0px 240px;
-        background: red;
+        background: $gris-dos;
         
     
     }
@@ -100,7 +100,7 @@
         top: 270px;
         height: 750px;
         padding: 0px 350px;
-        background:paleturquoise;
+        background: $gris-dos;
         
     
     }
@@ -118,7 +118,7 @@
         top: 300px;
         height: 750px;
         padding: 0px 420px;
-        background: hotpink;
+        background: $gris-dos;
         
     
     }
@@ -137,7 +137,7 @@
         position: absolute;
         top: 250px;
         height: 400px;
-        padding: 0px 400px;
+        padding: 0px 450px;
         background: transparent;
         
     
