--- a/assets/sass/components/_cards.scss
+++ b/assets/sass/components/_cards.scss
@@ -3,6 +3,9 @@
     margin-top: 2rem;
 }
 .card-body{
+    &:hover{
+        box-shadow: 10px 5px 10px $gris-cinco;
+    }
     ul{
         padding: 0px 0px 0px 20px;
         margin: 0px;
@@ -33,11 +36,11 @@
         height: 450px;
     }
     
-    
+
 }
 @media only screen and (min-width: 1500px) and (max-width: 1980px){
     .card__linea--ultimo{
-        margin-top: 170px;
+        margin-top: 190px;
     }
     .card__linea--ultimo2{
         margin-top: 95px;
