--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -6,6 +6,8 @@
 
 @import 'base/reset';
 @import 'base/typography';
+@import 'base/animacion';
+
 
 @import 'layout/navigation';
 @import 'layout/grid';
