--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10323,13 +10323,32 @@ footer {
 }
 footer {
   background: #221d23;
+  height: 250px;
+}
+
+.final {
   height: 150px;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   justify-content: space-around;
   align-items: center;
 }
 
+.cuatro {
+  text-align: center;
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1980px) {
+  footer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .final .uno, .final .dos, .final .tres {
+    padding: 20px;
+  }
+}
 #hero-section {
   position: relative;
   height: 550px;
@@ -10466,7 +10485,7 @@ footer {
 
 @media only screen and (min-width: 900px) and (max-width: 1980px) {
   .feature__grafico {
-    padding-top: 20px;
+    padding: 20px 20px;
   }
 }
 .navbar {
